Remove border collapse due to issues with overflow hidden

--- a/Wizard.WebFormZ.css
+++ b/Wizard.WebFormZ.css
@@ -37,7 +37,7 @@
 
 .RadWizard_WebFormZ .rwzBreadCrumb {
     /* border-radius: 4px; */
-    border-collapse: collapse;
+    /* border-collapse: collapse; */
     border-color: rgba(204, 204, 204, 0.5);
     color: #333;
     background-color: #fff;
